# data_analysis

./: .gitattributes  .gitignore  .gitmodules  Getting Indices.ipynb  Locate FSGP.ipynb  README.md  Speed Constraints.ipynb  pyproject.toml  register_kernel.sh  steep_segments_pairs.html
.github/: PULL_REQUEST_TEMPLATE.md
array_temp/: .cache.sqlite  Control_Model.ipynb  DataPreprocessing.py  RNN.py  RNN_Dataset.py  coefficient_fitting.ipynb  control_model_revised.ipynb  data_preprocessing.py  faiman_coefficients.ipynb  pyproject.toml  rnn_model.pt  temp.ipynb  temporary.ipynb
battery_analysis/: hppc_preliminary.ipynb  query.csv  single_pulse_examination.ipynb
btm_analysis/: btm_analysis.ipynb
control_model/: DataPreprocessing.py  RNN.py  RNN_Dataset.py  RNN_Training.py  control_model.py  control_model_revised.ipynb  fsgp_2024_training_data.csv  inference.py  localization_roc.py  rnn_model (1).pth  rnn_model.pth  scaler.pkl  visualization.py
data/: fsgp_timing_day_1.csv  fsgp_timing_day_2.csv  fsgp_timing_day_3.csv
data_query/: current.csv
gps_analysis/: gps_analysis.ipynb
motor_analysis/: .cache.sqlite  correlation_df.py  correlation_df_deprecated.py  correlation_df_optimized.py  correlation_matrix.ipynb  cruising_data.dill  cruising_data_april.dill  cruising_finder.ipynb  cruising_test_distances.py  driver_acceleration_profiles.py  efficiency_correlation_report.ipynb  faiman_coefficients.ipynb  fsgp_2024_lap_efficiency.ipynb  fsgp_2024_laps.py  imu_data_april_6.ipynb  lap_data.csv  lap_data_helper.py  lap_efficiency.py  lap_efficiency_cor.ipynb  lap_efficiency_jonah.ipynb  motor_analysis.ipynb  motor_efficiency_vs_speed.py  motor_model_test.ipynb  motor_power_model.py  motor_testing_april_6.ipynb  weight_vs_distance_calculator.py
motor_validation/: calculate_power.py  cornering_stuff.py  efficiencies.py  map.html  model.py  motor_current_day1.csv  motor_voltage_day1.csv  (+3 more)
v4/array_efficiency_analysis/: array_efficiency_analysis_2024.ipynb  array_efficiency_analysis_2025.ipynb  array_efficiency_analysis_refactor.ipynb  data_analysis.code-workspace  pyproject.toml
v4/array_efficiency_analysis/results/: READ-ME.txt
v4/array_efficiency_analysis/scripts/: openmeteo_request_functions.py  string_power_functions.py
v4/localization_with_acceleration/: acceleration.ipynb  pyproject.toml
v4/localization_with_acceleration/results/: RESULTS.md
v4/phone_gpslogger/: descriptive_notebook_name.ipynb  pyproject.toml
v4/phone_gpslogger/data/: Final Brightside Driving Availability - Note Taking.csv  descriptive_notebook_name.ipynb
v4/phone_gpslogger/data/april_2_testing/: 20260402.gpx
v4/phone_gpslogger/data/test_walk/: 20260331_note10pro.csv  20260331_pixel7.csv
v4/phone_gpslogger/results/maps/: coast_down_tests.html  first_driving_and_faults.html  michael_driving.html  multi_driver_lapping.html
v4/phone_gpslogger/scripts/: SCRIPTS.md  gps_test_vibecoded.py
v4/signal_tracking/: README.md  collect_signals.ipynb  pyproject.toml
(+107 files in other folders)
