[tool.poetry]
name = "data-analysis"
version = "0.1.1"
description = "UBC Solar's data analysis environment"
authors = ["Joshua Riefman <joshuariefman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.4"
scipy = "^1.14.0"
ipykernel = "^6.29.5"
ubc-solar-physics = {git = "https://github.com/UBC-Solar/physics", rev = "battery_model_changes"}
ubc-solar-data-tools = "^1.3.1"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
