[project]
name = "localization-with-acceleration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "notebook>=7.5.1",
    "numpy==2.3",
    "pandas>=2.3.3",
    "scipy>=1.17.0",
    "ubc-solar-data-tools>=1.9.1",
    "ubc-solar-physics>=1.9.1",
]
