[project]
name = "phone-gpslogger"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "contextily>=1.7.0",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "seaborn>=0.13.2",
    "shapely>=2.1.2",
]
