[project]
name = "signal-tracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "nbconvert>=7.17.0",
    "numpy>=2.4.2",
    "ubc-solar-data-tools>=1.9.1",
]

[dependency-groups]
dev = [
    "nbconvert>=7.17.0",
    "pandoc>=2.4",
]
